# lr7

./: CMakeLists.txt  CmakeLists.txt
include/: Bear.h  Factory.h  GameManager.h  Observers.h  Rogue.h  Table.h  Visitor.h  Werewolf.h  constants.h  npc.h
src/: Bear.cpp  GameManager.cpp  Rogue.cpp  Werewolf.cpp  main.cpp  npc.cpp
test/: simple_tests.cpp
